# EasyTier

./: .gitattributes  AGENTS.md  Cargo.toml  README.md  README_CN.md  pnpm-lock.yaml
.github/actions/prepare-pnpm/: action.yml
.github/workflows/: android-policy-candidate.yml  core.yml  gui-macos-aarch64-test.yml  gui.yml  mobile.yml  ohos.yml  profiling-beta.yml  release.yml  test.yml
docs/todo/: macos_leaf_policy_fix.md  windows_leaf_policy_implementation.md
easytier/: Cargo.toml
easytier-contrib/easytier-magisk/: build.sh  module.prop
easytier-contrib/easytier-uptime/src/: health_checker.rs
easytier-gui/: package.json
easytier-gui/src/: auto-imports.d.ts  main.ts
easytier-gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  windows-installer-hooks.nsh
easytier-gui/src-tauri/src/: lib.rs  vpn_stop_dispatch.rs
easytier-gui/src/composables/: backend.ts  config.ts  event.ts  mobile_vpn.ts  vpn_routes.ts
easytier-gui/src/modules/: api.ts
easytier-gui/src/pages/: index.vue
easytier-policy/: Cargo.toml
easytier-policy/src/: config.rs  geodata.rs  inprocess.rs  leaf_config.rs  leaf_process.rs  lib.rs  packet.rs  preflight.rs  shadowsocks.rs  stream_transport.rs  supervisor.rs  trojan.rs  vless.rs  vmess.rs  windows.rs
easytier-socks-egress/: Cargo.toml  build.rs
easytier-socks-egress/src/: lib.rs
easytier-web/: Cargo.toml
easytier-web/frontend-lib/: package.json
easytier-web/frontend-lib/scripts/: test-network-config.mjs
easytier-web/frontend-lib/tests/: config-ui.spec.ts  gui-persisted-selection.spec.ts  managed-rule-data.spec.ts  network-chart.spec.ts  policy-document.spec.ts  policy-editor.spec.ts  policyRuntimeSupport.spec.ts  remote-management-config.spec.ts  status-component.spec.ts  status-display.spec.ts  url-input.spec.ts  vpn-routes.spec.ts
easytier-web/src/restful/: network.rs
easytier/docs/: easy_bench.sh  fork_differences.md  fork_differences_cn.md  leaf_overdesign_performance_audit_2026_07_16_cn.md  leaf_policy_dataplane_performance_investigation_cn.md  leaf_policy_proxy_cn.md  leaf_policy_shadowsocks_example.yaml  leaf_policy_v1_example.yaml  leaf_shadowsocks_uot_validation_report_cn.md  leaf_trojan_vmess_vless_validation_report_cn.md  leaf_v1_function_performance_report_cn.md  mihomo_tun_interop.md  mihomo_tun_interop_cn.md  openwrt_overlay_underlay_quic_ipv6_2026_07_11.md  openwrt_overlay_underlay_quic_ipv6_2026_07_11_cn.md  performance_root_cause_analysis.md  performance_validation_2026_07_08.md  policy_proxy_validation_2026_07_13.md  quic_brutal.md  quic_transport_tuning.md  relay_peer_manager_design.md  release_candidate_validation_63ed38f0.md  release_candidate_validation_b019c33c.md  socks5_performance_investigation.md  socks5_performance_investigation_cn.md  stealth_secure_optimization_plan.md  stealth_secure_profiling_2026_07_09.md  stealth_zero_copy_validation_report.md  traffic_protocol_layers_cn.md  transport_priority_breaker_validation_2026_07_09.md  transport_stealth_dpi_analysis.md  udp_stealth_compatibility.md
easytier/docs/failed_attempts/: FAILED_leaf_external_packet_endpoint_performance.md  FAILED_leaf_linux_owned_policy_tun_performance.md  gso_gro_batching_plan.md
easytier/docs/known_bugs/: android_idle_power_mesh_p2p_diagnosis_2026_07_18.md  android_mesh_throughput_investigation.md  kcp_bugs_and_mihomo_loopback.md  netstack_tcp_buffer_scaling_failed_implementations.md  stealth_secure_known_bugs.md  udp_underlay_queue_drop_suspect.md  windows_upgrade_requires_manual_uninstall.md
easytier/docs/release/: v3.0.0_candidate_manifest.md  v3.0.0_recovery_ledger.md  v3.0.0_validation_matrix.md  v3.0.1_candidate_manifest.md  v3.0.1_validation_matrix.md  v3.0.2_candidate_manifest.md  v3.0.2_validation_matrix.md  v3.0.3_candidate_manifest.md  v3.0.3_validation_matrix.md  v3.0.4_candidate_manifest.md  v3.0.4_validation_matrix.md  v3.0.5_candidate_manifest.md  v3.0.5_validation_matrix.md
easytier/docs/release_notes/: v2.6.10.md  v2.6.8.md  v2.6.9.md  v3.0.0.md  v3.0.1.md  v3.0.2.md  v3.0.3.md  v3.0.4.md  v3.0.5.md
easytier/docs/todo/: KCP 生命周期安全修复方案（保留 SOCKS KCP 性能）.md  USER_UNDECIDED_android_leaf_dual_tun.md  android_policy_performance_power_followup.md  android_status_notification_webview_lifecycle.md  gui_global_secure_identity.md  hysteria2_overlay_gso_validation_plan.md  leaf_2026-07-19_work_summary.md  leaf_external_packet_endpoint_performance.md  leaf_linux_owned_policy_tun_cross_kernel_validation.md  leaf_linux_owned_policy_tun_performance.md  leaf_linux_owned_policy_tun_validation_journal.md  leaf_optional_policy_proxy.md  leaf_parallel_workboard.md  leaf_post_v1_backlog.md  leaf_shadowsocks_uot_v2.md  leaf_trojan_vmess_vless_plugins_undecided.md  leaf_tun_scheduler_investigation_2026_07_17.md  leaf_v1_release_gates.md  leaf_validation_journal.md  linux_tun_gso_root_performance_plan.md  macos_quinn_truncation_candidate.md  mihomo_desktop_unix_policy_backend.md  netstack_runner_event_driven_validation.md  performance_bottleneck_exclusions.md  profiling_bundle_performance_selftest.md  qt_lite_service_console.md  quic_default_ipv6_listener.md  quic_endpoint_exact_removal.md  upstream_7_commits_selective_integration_plan.md  user_undecided_mesh_peer_egress.md
easytier/resources/policy-rule-data/: SOURCE.md
easytier/src/: core.rs  instance_manager.rs  launcher.rs  lib.rs  policy_proxy.rs  policy_rule_data.rs
easytier/src/common/: config.rs  constants.rs  dns.rs  error.rs  global_ctx.rs  machine_id.rs  (+6 more)
scripts/: build-hev-socks-egress.sh  leaf-android-validate.sh  leaf-candidate-artifacts.sh  leaf-linux-validate.sh  leaf-packet-batch-validation.sh  leaf-perf-selftest.sh  leaf-policy-dataplane-compare.py  leaf-policy-dataplane-validation.sh  leaf-remote-preflight.sh  mesh-perf-selftest.sh  profiling-perf-selftest.sh  release-candidate-audit.sh
tauri-plugin-vpnservice/guest-js/: index.ts
tauri-plugin-vpnservice/src/: lib.rs  mobile.rs  models.rs
tauri-plugin-vpnservice/tests/: native_command_contract.rs
tools/: easytier-perf-probe.rs
(+96 files in other folders)
