[workspace]
resolver = "2"
members = [
    "easytier",
    "easytier-policy",
    "third_party/kcp-sys",
    "easytier-gui/src-tauri",
    "easytier-web",
    "easytier-contrib/easytier-ffi",
    "easytier-contrib/easytier-uptime",
    "easytier-contrib/easytier-android-jni",
]
default-members = ["easytier", "easytier-web"]
exclude = [
    "easytier-contrib/easytier-ohrs", # it needs ohrs sdk
]

[workspace.package]
edition = "2024"
rust-version = "1.95"

[profile.dev]
panic = "unwind"
debug = "line-tables-only"
opt-level = 1

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true

[patch."https://github.com/eycorsican/netstack-smoltcp"]
netstack-smoltcp = { path = "third_party/netstack-smoltcp" }
