[package]
name = "easytier-policy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
publish = false

[[bin]]
name = "easytier-leaf-worker"
path = "src/bin/easytier-leaf-worker.rs"
required-features = ["leaf-worker"]

[features]
default = []
leaf-runtime = ["dep:leaf"]
leaf-worker = ["leaf-runtime"]
leaf-inprocess = ["leaf-runtime"]

[dependencies]
arc-swap = "1.7"
cidr = "0.3"
maxminddb = "0.24.0"
prefix-trie = { version = "0.7", features = ["cidr"] }
prost = "0.14.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10.8"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "net", "macros", "process"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dependencies.leaf]
git = "https://github.com/lovitus/leaf.git"
rev = "08c046b4184e2bcc63935c38d1750a44b9723052"
optional = true
default-features = false
features = [
    "config-conf",
    "config-json",
    "inbound-tun",
    "outbound-direct",
    "outbound-drop",
    "outbound-socks",
    "outbound-tls",
    "outbound-failover",
    "outbound-chain",
    "ring-aead",
    "rustls-tls",
    "rustls-tls-ring",
]

[dev-dependencies]
tempfile = "3"
