[package]
name = "easytier-socks-egress"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[features]
default = []
hev-inprocess = []
hev-sidecar-bin = []

[[bin]]
name = "easytier-hev-socks-egress"
path = "src/bin/easytier-hev-socks-egress.rs"
required-features = ["hev-sidecar-bin"]

[dependencies]
anyhow = "1"
libc = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "process", "rt", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
